--- a/index.html
+++ b/index.html
@@ -18,13 +18,42 @@
     <div class="app-face rounded-circle mx-auto">
       <div class="face-content ">
         <div id="location" class="data-row"></div>
+        <h6>Temperature</h6>
         <div id="temperature" class="data-row"></div>
         <div id="weather-info" class="data-row"></div>
-        <div id="feels-like" class="data-row">
+        <h6>Feels Like</h3>
+          <div id="feels-like" class="data-row">
+          </div>
+      </div>
+    </div>
+    <button type="button" class="btn btn-primary mx-auto" data-toggle="modal" data-target="#locModal">Change
+      Location</button>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="locModal" tabindex="-1" aria-labelledby="locModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="locModalLabel">Choose location</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="w-form">
+            <div class="form-group">
+              <label for="city">City</label>
+              <input type="text" id="city" class="form-control">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="w-change-btn">Save changes</button>
         </div>
       </div>
     </div>
-    <button type="button" class="btn btn-primary mx-auto">Change Location</button>
   </div>
 
   <!-- Optional JavaScript -->
@@ -38,6 +67,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
   </script>
+  <script src="storage.js "></script>
   <script src="weather.js"></script>
   <script src="ui.js"></script>
   <script src="app.js"></script>
